# FridgeLuck

./: .cursorignore  .env.example  .gitattributes  .gitignore  .gitignore.orig  .swift-format  README.md  package.json  project.yml
.githooks/: pre-commit
FridgeLuck.swiftpm/: AppDependencies.swift  ContentView.swift  MyApp.swift  Package.resolved  Package.swift  (+1 more)
scripts/data/: README.md  backfill_usda_common_ingredients.py  build_usda_catalog_sqlite.py  fetch_usda_ingredient_nutrition.py  generate_usda_ingredient_swift_static.py  generate_usda_override_candidates.py  pyproject.toml  usda.py  usda_manual_overrides.json
scripts/data/catalog/: usda_curated_ingredients.json
scripts/data/review_batches/: manual_batch_001.json  manual_batch_002.json  manual_batch_003.json  manual_batch_004.json  manual_batch_005.json  manual_batch_006.json  manual_batch_007.json  manual_batch_008.json  manual_batch_009.json  manual_batch_010.json  manual_batch_011.json  manual_batch_012.json  manual_batch_013.json  manual_batch_014.json  manual_batch_015.json  manual_batch_016.json  manual_batch_017.json  manual_batch_018.json  manual_batch_019.json  manual_batch_020.json  manual_batch_021.json
scripts/data/usda_core/: batches.py  build_sqlite.py  cache_store.py  candidates.py  client_async.py  config.py  io.py  migrate.py  promote.py  report.py  schema.py  sprite_rules.py  utils.py  validate.py
scripts/recipe_scraper/: README.md  pyproject.toml  scrape_recipes.py
scripts/recipe_scraper/.cache/: bbc_goodfood_recipes.json  bbc_goodfood_recipes.test.json  merge_report.json
(+445 files in other folders)
