[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fridgeluck-usda"
version = "0.1.0"
description = "USDA curation and build pipeline for FridgeLuck"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "typer>=0.12,<1.0",
  "pydantic>=2.8,<3.0",
  "orjson>=3.10,<4.0",
  "filelock>=3.16,<4.0",
  "tenacity>=9.0,<10.0",
]

[project.scripts]
usda = "usda:main"

[tool.setuptools]
py-modules = ["usda"]

[tool.setuptools.packages.find]
include = ["usda_core*"]
