[project]
name = "recipe-scraper"
version = "0.1.0"
description = "BBC Good Food recipe scraper for FridgeLuck"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "typer>=0.12.0,<1.0.0",
]

[project.scripts]
scrape-recipes = "scrape_recipes:main"

[tool.uv]
package = false
